Comments front and back

--- a/RecipeSocial.Interface.Web/Views/Shared/_RecipeCard.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Shared/_RecipeCard.cshtml
@@ -6,10 +6,10 @@
 <div class="post-bar">
     <div class="post_topbar">
         <div class="usy-dt">
-            <img src="images/resources/us-pic.png" alt="">
+            <img src="~/img/resources/us-pic.png" alt="">
             <div class="usy-name">
                 <h3>John Doe</h3>
-                <span><img src="images/clock.png" alt="">3 min ago</span>
+                <span><img src="~/img/clock.png" alt="">3 min ago</span>
             </div>
         </div>
         <div class="ed-opts">
@@ -25,8 +25,8 @@
     </div>
     <div class="epi-sec">
         <ul class="descp">
-            <li><img src="images/icon8.png" alt=""><span>Epic Coder</span></li>
-            <li><img src="images/icon9.png" alt=""><span>India</span></li>
+            <li><img src="~/img/icon8.png" alt=""><span>Epic Coder</span></li>
+            <li><img src="~/img/icon9.png" alt=""><span>India</span></li>
         </ul>
         <ul class="bk-links">
             <li><a href="#" title=""><i class="la la-bookmark"></i></a></li>
@@ -52,11 +52,24 @@
         <ul class="like-com">
             <li>
                 <a href="#"><i class="la la-heart"></i> Like</a>
-                <img src="images/liked-img.png" alt="">
+                <img src="~/img/liked-img.png" alt="">
                 <span>25</span>
             </li>
-            <li><a href="#" title="" class="com"><img src="images/com.png" alt=""> Comment 15</a></li>
+            <li><a href="#" title="" class="com"><img src="~/img/com.png" alt=""> Comment 15</a></li>
         </ul>
+
+        @using (Html.BeginForm(""))
+        {
+            <div class="form-group">
+                <div class="input-group mb-3">
+                    @Html.TextBox("comment", "", new { @class = "form-control" })
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button">Send</button>
+                    </div>
+                </div>
+            </div>
+        }
+
         <a><i class="la la-eye"></i>Views 50</a>
     </div>
 </div>
