--- a/RecipeSocial.Interface.Web/Views/Home/Index.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Home/Index.cshtml
@@ -70,63 +70,7 @@
                                 </div>
                             </div>
                             <div class="posts-section">
-                                <div class="post-bar">
-                                    <div class="post_topbar">
-                                        <div class="usy-dt">
-                                            <img src="~/img/resources/us-pic.png" alt="">
-                                            <div class="usy-name">
-                                                <h3>John Doe</h3>
-                                                <span><img src="~/img/clock.png" alt="">3 min ago</span>
-                                            </div>
-                                        </div>
-                                        <div class="ed-opts">
-                                            <a href="#" title="" class="ed-opts-open"><i class="la la-ellipsis-v"></i></a>
-                                            <ul class="ed-options">
-                                                <li><a href="#" title="">Edit Post</a></li>
-                                                <li><a href="#" title="">Unsaved</a></li>
-                                                <li><a href="#" title="">Unbid</a></li>
-                                                <li><a href="#" title="">Close</a></li>
-                                                <li><a href="#" title="">Hide</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="epi-sec">
-                                        <ul class="descp">
-                                            <li><img src="~/img/icon8.png" alt=""><span>Epic Coder</span></li>
-                                            <li><img src="~/img/icon9.png" alt=""><span>India</span></li>
-                                        </ul>
-                                        <ul class="bk-links">
-                                            <li><a href="#" title=""><i class="la la-bookmark"></i></a></li>
-                                            <li><a href="#" title=""><i class="la la-envelope"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="job_descp">
-                                        <h3>Senior Wordpress Developer</h3>
-                                        <ul class="job-dt">
-                                            <li><a href="#" title="">Full Time</a></li>
-                                            <li><span>$30 / hr</span></li>
-                                        </ul>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus hendrerit metus, ut ullamcorper quam finibus at. Etiam id magna sit amet... <a href="#" title="">view more</a></p>
-                                        <ul class="skill-tags">
-                                            <li><a href="#" title="">HTML</a></li>
-                                            <li><a href="#" title="">PHP</a></li>
-                                            <li><a href="#" title="">CSS</a></li>
-                                            <li><a href="#" title="">Javascript</a></li>
-                                            <li><a href="#" title="">Wordpress</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="job-status-bar">
-                                        <ul class="like-com">
-                                            <li>
-                                                <a href="#"><i class="la la-heart"></i> Like</a>
-                                                <img src="~/img/liked-img.png" alt="">
-                                                <span>25</span>
-                                            </li>
-                                            <li><a href="#" title="" class="com"><img src="~/img/com.png" alt=""> Comment 15</a></li>
-                                        </ul>
-                                        <a><i class="la la-eye"></i>Views 50</a>
-                                    </div>
-                                </div>
+                                @await Html.PartialAsync("_RecipeCard", new Recipe())
                                 <div class="top-profiles">
                                     <div class="pf-hd">
                                         <h3>Top Recetas</h3>
@@ -386,166 +330,6 @@
                                         <div class="bounce3"></div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 pd-right-none no-pd">
-                        <div class="right-sidebar">
-                            <div class="widget widget-about">
-                                <img src="~/img/wd-logo.png" alt="">
-                                <h3>Track Time on Workwise</h3>
-                                <span>Pay only for the Hours worked</span>
-                                <div class="sign_link">
-                                    <h3><a href="#" title="">Sign up</a></h3>
-                                    <a href="#" title="">Learn More</a>
-                                </div>
-                            </div><!--widget-about end-->
-                            <div class="widget widget-jobs">
-                                <div class="sd-title">
-                                    <h3>Top Jobs</h3>
-                                    <i class="la la-ellipsis-v"></i>
-                                </div>
-                                <div class="jobs-list">
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Senior Product Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Senior UI / UX Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Junior Seo Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Senior PHP Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Senior Developer Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                </div><!--jobs-list end-->
-                            </div><!--widget-jobs end-->
-                            <div class="widget widget-jobs">
-                                <div class="sd-title">
-                                    <h3>Most Viewed This Week</h3>
-                                    <i class="la la-ellipsis-v"></i>
-                                </div>
-                                <div class="jobs-list">
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Senior Product Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Senior UI / UX Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                    <div class="job-info">
-                                        <div class="job-details">
-                                            <h3>Junior Seo Designer</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-                                        </div>
-                                        <div class="hr-rate">
-                                            <span>$25/hr</span>
-                                        </div>
-                                    </div><!--job-info end-->
-                                </div><!--jobs-list end-->
-                            </div><!--widget-jobs end-->
-                            <div class="widget suggestions full-width">
-                                <div class="sd-title">
-                                    <h3>Most Viewed People</h3>
-                                    <i class="la la-ellipsis-v"></i>
-                                </div><!--sd-title end-->
-                                <div class="suggestions-list">
-                                    <div class="suggestion-usd">
-                                        <img src="~/img/resources/s1.png" alt="">
-                                        <div class="sgt-text">
-                                            <h4>Jessica William</h4>
-                                            <span>Graphic Designer</span>
-                                        </div>
-                                        <span><i class="la la-plus"></i></span>
-                                    </div>
-                                    <div class="suggestion-usd">
-                                        <img src="~/img/resources/s2.png" alt="">
-                                        <div class="sgt-text">
-                                            <h4>John Doe</h4>
-                                            <span>PHP Developer</span>
-                                        </div>
-                                        <span><i class="la la-plus"></i></span>
-                                    </div>
-                                    <div class="suggestion-usd">
-                                        <img src="~/img/resources/s3.png" alt="">
-                                        <div class="sgt-text">
-                                            <h4>Poonam</h4>
-                                            <span>Wordpress Developer</span>
-                                        </div>
-                                        <span><i class="la la-plus"></i></span>
-                                    </div>
-                                    <div class="suggestion-usd">
-                                        <img src="~/img/resources/s4.png" alt="">
-                                        <div class="sgt-text">
-                                            <h4>Bill Gates</h4>
-                                            <span>C &amp; C++ Developer</span>
-                                        </div>
-                                        <span><i class="la la-plus"></i></span>
-                                    </div>
-                                    <div class="suggestion-usd">
-                                        <img src="~/img/resources/s5.png" alt="">
-                                        <div class="sgt-text">
-                                            <h4>Jessica William</h4>
-                                            <span>Graphic Designer</span>
-                                        </div>
-                                        <span><i class="la la-plus"></i></span>
-                                    </div>
-                                    <div class="suggestion-usd">
-                                        <img src="~/img/resources/s6.png" alt="">
-                                        <div class="sgt-text">
-                                            <h4>John Doe</h4>
-                                            <span>PHP Developer</span>
-                                        </div>
-                                        <span><i class="la la-plus"></i></span>
-                                    </div>
-                                    <div class="view-more">
-                                        <a href="#" title="">View More</a>
-                                    </div>
-                                </div><!--suggestions-list end-->
                             </div>
                         </div>
                     </div>
