--- a/RecipeSocial.Interface.Web/Views/Shared/_RecipeCard.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Shared/_RecipeCard.cshtml
@@ -58,7 +58,7 @@
             <li><a href="#" title="" class="com"><img src="~/img/com.png" alt=""> Comment 15</a></li>
         </ul>
 
-        @using (Html.BeginForm(""))
+        @using (Html.BeginForm("Comment", "Recipe", FormMethod.Post))
         {
             <div class="form-group">
                 <div class="input-group mb-3">
