--- a/RecipeSocial.Interface.Web/Views/Home/Index.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-lg-9 col-md-8 no-pd">
                         <div class="main-ws-sec">
-                            <div class="post-topbar">
+                            @*<div class="post-topbar">
                                 <div class="user-picy">
                                     <img src="~/img/resources/user-pic.png" alt="">
                                 </div>
@@ -68,7 +68,7 @@
                                         <li><a class="post-jb active" href="#" title="">Post a Job</a></li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="posts-section">
                                 <div class="post-bar">
                                     <div class="post_topbar">
