--- a/RecipeSocial.Interface.Web/wwwroot/css/style.css
+++ b/RecipeSocial.Interface.Web/wwwroot/css/style.css
@@ -1467,10 +1467,11 @@ main {
 	border-radius: inherit;
 }
 .posty {
-	float: left;
-	width: 100%;
-	border-left: 1px solid #e4e4e4;
-	border-right: 1px solid #e4e4e4;
+    float: left;
+    width: 100%;
+    border-left: 1px solid #e4e4e4;
+    border-right: 1px solid #e4e4e4;
+    margin-bottom: 20px;
 }
 .posty .job-status-bar {
 	border-bottom: 1px solid #e4e4e4;
