--- a/RecipeSocial.Interface.Web/Views/Shared/_Layout.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Shared/_Layout.cshtml
@@ -109,7 +109,56 @@
         </header>
 
         @RenderBody()
-
+        <div class="post-popup pst-pj">
+            <div class="post-project">
+                <h3>Recipe's creation</h3>
+                <div class="post-project-fields">
+                    <form action="/Recipe/Create" method="post">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <input type="text" name="title" placeholder="Title">
+                            </div>
+                            @*<div class="col-lg-12">
+                                <div class="inp-field">
+                                    <select>
+                                        <option>Category</option>
+                                        <option>Category 1</option>
+                                        <option>Category 2</option>
+                                        <option>Category 3</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <input type="text" name="skills" placeholder="Skills">
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="price-sec">
+                                    <div class="price-br">
+                                        <input type="text" name="price1" placeholder="Price">
+                                        <i class="la la-dollar"></i>
+                                    </div>
+                                    <span>To</span>
+                                    <div class="price-br">
+                                        <input type="text" name="price1" placeholder="Price">
+                                        <i class="la la-dollar"></i>
+                                    </div>
+                                </div>
+                            </div>*@
+                            <div class="col-lg-12">
+                                <textarea name="description" placeholder="Description"></textarea>
+                            </div>
+                            <div class="col-lg-12">
+                                <ul>
+                                    <li><button class="active" type="submit" value="post">Post</button></li>
+                                    <li><a href="#" title="">Cancel</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </form>
+                </div><!--post-project-fields end-->
+                <a href="#" title=""><i class="la la-times-circle-o"></i></a>
+            </div><!--post-project end-->
+        </div>
         <footer>
             <div class="footy-sec mn no-margin">
                 <div class="container">
