--- a/RecipeSocial.Interface.Web/Views/Home/Index.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Home/Index.cshtml
@@ -11,32 +11,6 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-4 pd-left-none no-pd">
                         <div class="main-left-sidebar no-margin">
-                            <div class="user-data full-width">
-                                <div class="user-profile">
-                                    <div class="username-dt">
-                                        <div class="usr-pic">
-                                            <img src="~/img/resources/user-pic.png" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="user-specs">
-                                        <h3>John Doe</h3>
-                                        <span>Graphic Designer at Self Employed</span>
-                                    </div>
-                                </div>
-                                <ul class="user-fw-status">
-                                    <li>
-                                        <h4>Following</h4>
-                                        <span>34</span>
-                                    </li>
-                                    <li>
-                                        <h4>Followers</h4>
-                                        <span>155</span>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">View Profile</a>
-                                    </li>
-                                </ul>
-                            </div>
                             @await Html.PartialAsync("_Suggestions", null, null)
                             <div class="tags-sec full-width">
                                 <ul>
@@ -58,19 +32,7 @@
                     </div>
                     <div class="col-lg-9 col-md-8 no-pd">
                         <div class="main-ws-sec">
-                            <div class="post-topbar">
-                                <div class="user-picy">
-                                    <img src="~/img/resources/user-pic.png" alt="">
-                                </div>
-                                <div class="post-st">
-                                    <ul>
-                                        <li><a class="post_project" href="#" title="">Post a Project</a></li>
-                                        <li><a class="post-jb active" href="#" title="">Post a Job</a></li>
-                                    </ul>
-                                </div>
-                            </div>
                             <div class="posts-section">
-                                @await Html.PartialAsync("_RecipeCard", new Recipe())
                                 <div class="top-profiles">
                                     <div class="pf-hd">
                                         <h3>Top Recetas</h3>
@@ -84,204 +46,32 @@
                                                 <h3>@recipe.Name</h3>
                                                 <span>Graphic Designer</span>
                                                 <ul>
-                                                    <li><a href="#" title="" class="followw">Follow</a></li>
-                                                    <li><a href="#" title="" class="envlp"><img src="~/img/envelop.png" alt=""></a></li>
-                                                    <li><a href="#" title="" class="hire">hire</a></li>
+                                                    <li><a href="@Url.Action("Detail", "Recipes", new { id = recipe.Id })" title="" class="followw">Ver</a></li>
                                                 </ul>
                                                 <ul class="like-com">
                                                     <li>
-                                                        <a href="#" style="color: #b2b2b2;"><i class="la la-heart"></i> Like</a>
+                                                        <a href="#" style="color: #b2b2b2;"><i class="la la-heart"></i>@recipe.TotalLikes Likes</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                         }
-                                    </div><!--profiles-slider end-->
-                                </div>
-                                <div class="post-bar">
-                                    <div class="post_topbar">
-                                        <div class="usy-dt">
-                                            <img src="~/img/resources/us-pic.png" alt="">
-                                            <div class="usy-name">
-                                                <h3>John Doe</h3>
-                                                <span><img src="~/img/clock.png" alt="">3 min ago</span>
-                                            </div>
-                                        </div>
-                                        <div class="ed-opts">
-                                            <a href="#" title="" class="ed-opts-open"><i class="la la-ellipsis-v"></i></a>
-                                            <ul class="ed-options">
-                                                <li><a href="#" title="">Edit Post</a></li>
-                                                <li><a href="#" title="">Unsaved</a></li>
-                                                <li><a href="#" title="">Unbid</a></li>
-                                                <li><a href="#" title="">Close</a></li>
-                                                <li><a href="#" title="">Hide</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="epi-sec">
-                                        <ul class="descp">
-                                            <li><img src="~/img/icon8.png" alt=""><span>Epic Coder</span></li>
-                                            <li><img src="~/img/icon9.png" alt=""><span>India</span></li>
-                                        </ul>
-                                        <ul class="bk-links">
-                                            <li><a href="#" title=""><i class="la la-bookmark"></i></a></li>
-                                            <li><a href="#" title=""><i class="la la-envelope"></i></a></li>
-                                            <li><a href="#" title="" class="bid_now">Bid Now</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="job_descp">
-                                        <h3>Senior Wordpress Developer</h3>
-                                        <ul class="job-dt">
-                                            <li><a href="#" title="">Full Time</a></li>
-                                            <li><span>$30 / hr</span></li>
-                                        </ul>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus hendrerit metus, ut ullamcorper quam finibus at. Etiam id magna sit amet... <a href="#" title="">view more</a></p>
-                                        <ul class="skill-tags">
-                                            <li><a href="#" title="">HTML</a></li>
-                                            <li><a href="#" title="">PHP</a></li>
-                                            <li><a href="#" title="">CSS</a></li>
-                                            <li><a href="#" title="">Javascript</a></li>
-                                            <li><a href="#" title="">Wordpress</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="job-status-bar">
-                                        <ul class="like-com">
-                                            <li>
-                                                <a href="#"><i class="la la-heart"></i> Like</a>
-                                                <img src="~/img/liked-img.png" alt="">
-                                                <span>25</span>
-                                            </li>
-                                            <li><a href="#" title="" class="com"><img src="~/img/com.png" alt=""> Comment 15</a></li>
-                                        </ul>
-                                        <a><i class="la la-eye"></i>Views 50</a>
                                     </div>
                                 </div>
-                                <div class="posty">
-                                    <div class="post-bar no-margin">
-                                        <div class="post_topbar">
-                                            <div class="usy-dt">
-                                                <img src="~/img/resources/us-pc2.png" alt="">
-                                                <div class="usy-name">
-                                                    <h3>John Doe</h3>
-                                                    <span><img src="~/img/clock.png" alt="">3 min ago</span>
-                                                </div>
-                                            </div>
-                                            <div class="ed-opts">
-                                                <a href="#" title="" class="ed-opts-open"><i class="la la-ellipsis-v"></i></a>
-                                                <ul class="ed-options">
-                                                    <li><a href="#" title="">Edit Post</a></li>
-                                                    <li><a href="#" title="">Unsaved</a></li>
-                                                    <li><a href="#" title="">Unbid</a></li>
-                                                    <li><a href="#" title="">Close</a></li>
-                                                    <li><a href="#" title="">Hide</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <div class="epi-sec">
-                                            <ul class="descp">
-                                                <li><img src="~/img/icon8.png" alt=""><span>Epic Coder</span></li>
-                                                <li><img src="~/img/icon9.png" alt=""><span>India</span></li>
-                                            </ul>
-                                            <ul class="bk-links">
-                                                <li><a href="#" title=""><i class="la la-bookmark"></i></a></li>
-                                                <li><a href="#" title=""><i class="la la-envelope"></i></a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="job_descp">
-                                            <h3>Senior Wordpress Developer</h3>
-                                            <ul class="job-dt">
-                                                <li><a href="#" title="">Full Time</a></li>
-                                                <li><span>$30 / hr</span></li>
-                                            </ul>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus hendrerit metus, ut ullamcorper quam finibus at. Etiam id magna sit amet... <a href="#" title="">view more</a></p>
-                                            <ul class="skill-tags">
-                                                <li><a href="#" title="">HTML</a></li>
-                                                <li><a href="#" title="">PHP</a></li>
-                                                <li><a href="#" title="">CSS</a></li>
-                                                <li><a href="#" title="">Javascript</a></li>
-                                                <li><a href="#" title="">Wordpress</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="job-status-bar">
-                                            <ul class="like-com">
-                                                <li>
-                                                    <a href="#"><i class="la la-heart"></i> Like</a>
-                                                    <img src="~/img/liked-img.png" alt="">
-                                                    <span>25</span>
-                                                </li>
-                                                <li><a href="#" title="" class="com"><img src="~/img/com.png" alt=""> Comment 15</a></li>
-                                            </ul>
-                                            <a><i class="la la-eye"></i>Views 50</a>
-                                        </div>
-                                    </div><!--post-bar end-->
-                                    <div class="comment-section">
-                                        <div class="plus-ic">
-                                            <i class="la la-plus"></i>
-                                        </div>
-                                        <div class="comment-sec">
-                                            <ul>
-                                                <li>
-                                                    <div class="comment-list">
-                                                        <div class="bg-img">
-                                                            <img src="~/img/resources/bg-img1.png" alt="">
-                                                        </div>
-                                                        <div class="comment">
-                                                            <h3>John Doe</h3>
-                                                            <span><img src="~/img/clock.png" alt=""> 3 min ago</span>
-                                                            <p>Lorem ipsum dolor sit amet, </p>
-                                                            <a href="#" title="" class="active"><i class="fa fa-reply-all"></i>Reply</a>
-                                                        </div>
-                                                    </div><!--comment-list end-->
-                                                    <ul>
-                                                        <li>
-                                                            <div class="comment-list">
-                                                                <div class="bg-img">
-                                                                    <img src="~/img/resources/bg-img2.png" alt="">
-                                                                </div>
-                                                                <div class="comment">
-                                                                    <h3>John Doe</h3>
-                                                                    <span><img src="~/img/clock.png" alt=""> 3 min ago</span>
-                                                                    <p>Hi John </p>
-                                                                    <a href="#" title=""><i class="fa fa-reply-all"></i>Reply</a>
-                                                                </div>
-                                                            </div><!--comment-list end-->
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <div class="comment-list">
-                                                        <div class="bg-img">
-                                                            <img src="~/img/resources/bg-img3.png" alt="">
-                                                        </div>
-                                                        <div class="comment">
-                                                            <h3>John Doe</h3>
-                                                            <span><img src="~/img/clock.png" alt=""> 3 min ago</span>
-                                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus hendrerit metus, ut ullamcorper quam finibus at.</p>
-                                                            <a href="#" title=""><i class="fa fa-reply-all"></i>Reply</a>
-                                                        </div>
-                                                    </div><!--comment-list end-->
-                                                </li>
-                                            </ul>
-                                        </div><!--comment-sec end-->
-                                        <div class="post-comment">
-                                            <div class="cm_img">
-                                                <img src="~/img/resources/bg-img4.png" alt="">
-                                            </div>
-                                            <div class="comment_box">
-                                                <form>
-                                                    <input type="text" placeholder="Post a comment">
-                                                    <button type="submit">Send</button>
-                                                </form>
-                                            </div>
-                                        </div><!--post-comment end-->
-                                    </div><!--comment-section end-->
-                                </div>
-                                <div class="process-comm">
-                                    <div class="spinner">
-                                        <div class="bounce1"></div>
-                                        <div class="bounce2"></div>
-                                        <div class="bounce3"></div>
+                                <div class="post-topbar">
+                                    <div class="user-picy">
+                                        <img src="~/img/resources/user-pic.png" alt="">
+                                    </div>
+                                    <div class="post-st">
+                                        <ul>
+                                            <li><a class="post_project" href="#" title="">Post a Project</a></li>
+                                            <li><a class="post-jb active" href="#" title="">Post a Job</a></li>
+                                        </ul>
                                     </div>
                                 </div>
+                                @foreach (Recipe recipe in Model.generalRecipeList)
+                                {
+                                    @await Html.PartialAsync("_RecipeCard", recipe)
+                                }
                             </div>
                         </div>
                     </div>
