--- a/RecipeSocial.Interface.Web/Views/Shared/_Layout.cshtml
+++ b/RecipeSocial.Interface.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <div class="header-data">
                     <div class="logo">
                         <a href="@Url.Action("Index", "Home")" title="Recipe Social">
-                            <img src="~/img/logo.png" alt="">
+                            <img src="~/img/logo.png" style="width: 50px;" alt="">
                         </a>
                     </div>
                     <div class="search-bar">
